<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.checkout.CheckoutActivity">



    <TextView
        android:id="@+id/cek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout2"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:layout_below="@id/cek"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/total"
        tools:listitem="@layout/item_penjualan_checkout" />

    <Button
        android:id="@+id/btn_checkout"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/rv_github"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/confirm"
        android:textSize="11sp" />

</RelativeLayout>