<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">


    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"

        />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_login"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="18dp"
        android:hint="@string/username"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="67dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/edt_username"
         />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="107dp"
        android:backgroundTint="@color/blue"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold" />





</RelativeLayout>