<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">


    <TextView
        android:id="@+id/tv_product"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_harga"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        tools:text="@string/username" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_product"
        android:background="@color/blue"
        tools:text="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_harga"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="35dp"
        android:ellipsize="end"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        tools:text="name" />

    <Button
        android:id="@+id/tv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="36dp"
        android:text="@string/buy"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_harga" />


</androidx.constraintlayout.widget.ConstraintLayout>